k8s/istio/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-istio
  namespace: backend-services
spec:
  hosts:
    - "*"
  gateways:
    - demo-istio-gateway
  http:
    - match:
        - uri:
            prefix: /product
      route:
        - destination:
            host: demo-istio
            port:
              number: 8080
